--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -66,20 +66,20 @@
             <label for="createActivityName" class="col-form-label">Nom</label>
             <input type="text"
                    id="createActivityName"
-                   name="user"
+                   name="name"
                    [(ngModel)]="createActivity.name"
-                   #user="ngModel"
+                   #name="ngModel"
                    class="form-control"/>
           </div>
           <div class="form-group">
-            <label for="createActivityLocation" class="col-form-label">Lieu</label>
-            <select name="location"
-                    id="createActivityLocation"
-                    [(ngModel)]="createActivity.location"
-                    #location="ngModel"
+            <label for="createActivityCity" class="col-form-label">Lieu</label>
+            <select name="city"
+                    id="createActivityCity"
+                    [(ngModel)]="createActivity.city"
+                    #city="ngModel"
                     class="form-control">
-              <ng-container *ngFor="let location of meteos">
-                <option value="{{ location.id }}"><!--{{ location.name }}-->Admettons</option>
+              <ng-container *ngFor="let city of cities">
+                <option value="{{ city.cityID }}">{{ city.name }}</option>
               </ng-container>
             </select>
           </div>
@@ -89,25 +89,28 @@
     </div>
 
     <div id="meteo-table" class="collapse" data-parent="#contents-section">
-      <table class="table table-stripped">
-        <tr>
-          <th>ID</th>
-          <th>Neige ?</th>
-          <th>Temperature</th>
-          <th>Hauteur des vagues</th>
-          <th>Intensité du vent</th>
-        </tr>
-
-        <ng-container *ngFor="let meteo of meteos">
+      <ng-container *ngFor="let activity of activities">
+        <h3>{{ activity.name }}</h3>
+        <table class="table table-stripped">
           <tr>
-            <td>{{ meteo.id }}</td>
-            <td>{{ meteo.snowing ? "oui" : "non" }}</td>
-            <td>{{ meteo.temperature }}°C</td>
-            <td>{{ meteo.wave }}m</td>
-            <td>{{ meteo.wind }} Beaufort</td>
+            <th>Ville</th>
+            <th>Neige ?</th>
+            <th>Temperature</th>
+            <th>Hauteur des vagues</th>
+            <th>Intensité du vent</th>
           </tr>
-        </ng-container>
-      </table>
+
+          <ng-container *ngFor="let meteo of meteos">
+            <tr>
+              <td>{{ meteo.city.name }}</td>
+              <td>{{ meteo.snowing ? "oui" : "non" }}</td>
+              <td>{{ meteo.temperature }}°C</td>
+              <td>{{ meteo.wave }}m</td>
+              <td>{{ meteo.wind }} Beaufort</td>
+            </tr>
+          </ng-container>
+        </table>
+      </ng-container>
     </div>
   </div>
 </section>
