--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -83,6 +83,15 @@
               </ng-container>
             </select>
           </div>
+          <div class="form-group">
+            <label for="createActivityLevel" class="col-form-label">Niveau</label>
+            <input type="text"
+                   id="createActivityLevel"
+                   name="level"
+                   [(ngModel)]="createActivity.level"
+                   #level="ngModel"
+                   class="form-control"/>
+          </div>
           <input type="submit" class="btn btn-success"/>
         </form>
       </td></tr></table>
